    - allow regions with end=-1 to turn off other regions using the
      group and off_by opcodes (#168)
    - made end=0 play the whole sample
    - fixed support for lochan and hichan opcodes (#155)
    - fixed crash when using lochan/hichan opcodes (#187)
    - sfz parser: allow -200 to 200 for pan_oncc opcode (#182)
    - added FLAC support (#191)

  * SoundFont format engine:
    - Initial implementation (not usable yet)
    - RT-safeness: avoid malloc in audio thread
    - fixed a bug that could cause voice stealing to fail
    - fine-tuned amplitude EG (by switching from gig to sfz EG)
    - initial implementation of Vibrato LFO and Modulation LFO
    - initial implementation of cutoff filter
    - use linear decay and release for filter and pitch EG

  * Host plugins (VST, AU, LV2, DSSI):
    - AU bugfix: failed to destroy its audio/MIDI devices
    - Listen to all interfaces on Mac OS X (INADDR_ANY)
    - VST bugfix: If the host called resume() before and after
      changing sample rate or block size, the number of channels was
      incorrectly set to two. This caused silence in Cubase 5.
    - save engine type (gig, sfz or sf2) in plugin state
    - VST: when opening Fantasia, look for both 32 and 64 bit Java on
      64 bit Windows
    - AU: changed number of output channels from one stereo to 16
      stereo
    - VST: made it possible to build the VST plugin for Mac
    - AU: link AU plugin dynamically if --disable-shared isn't
      specified
    - LV2 "state" extension support (patch by David Robillard)
    - VST bugfix: instrument loading hang and crashed the host when
      the plugin was loaded a second time (#174)
    - plugin bugfix: instrument loading hang when the plugin was
      loaded a second time (this time it's for Linux and Mac, previous
      similar fix was for Windows)
    - thread safety fixes for the instrument loading thread
    - LV2: use the new lv2 package if present